# baseball

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISASTER_RECOVERY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  STRATEGY_AUDIT_2026-05.md  pyproject.toml  railway.toml  requirements.txt  run.py  setup_dev.sh
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3d6c88294f54_add_source_to_player_game_log.py  792e0bd8996d_baseline.py  a1b2c3d4e5f6_add_statcast_columns.py  b2c3d4e5f6a7_add_batting_order_source.py  c3d4e5f6a7b8_v10_8_xstats_team_season_rest.py  d4e5f6a7b8c9_drop_historical_db_tables.py  e5f6a7b8c9d0_drop_slate_player_outcome_columns.py  e7a005bfa4ca_add_mlb_id_index.py
app/: config.py  database.py  main.py  seed.py
app/core/: constants.py  historical_db.py  logging_config.py  mlb_api.py  odds_api.py  open_meteo.py  popularity.py  rotowire.py  statcast.py  utils.py  weights.py
app/models/: __init__.py  calibration.py  draft.py  player.py  scoring.py  slate.py
app/routers/: calibration.py  draft.py  filter_strategy.py  pipeline.py  players.py  popularity.py  scoring.py  slates.py
app/schemas/: calibration.py  draft.py  filter_strategy.py  pipeline.py  player.py  popularity.py  scoring.py  slate.py
app/services/: app_state.py  calibration.py  candidate_resolver.py  condition_classifier.py  condition_validation.py  data_collection.py  draft_optimizer.py  filter_strategy.py  lineup_cache.py  ml_model.py  pipeline.py  popularity.py  scoring_engine.py  slate_monitor.py
data/: april4_players.csv  april4_winning_drafts.csv  historical_conditions.csv  historical_player_game_logs.csv  historical_players.csv  historical_slate_results.json  historical_winning_drafts.csv  hv_model.joblib  hv_player_game_stats.csv  hv_trait_analysis.md
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: _backfill_common.py  _historical_loader.py  _statcast_bulk.py  apply_hv_stats_corrections.py  audit_historical_corpus.py  audit_hv_hit_rate.py  audit_lineup_tv.py  audit_live_isolation.py  audit_player_dim_drift.py  audit_slot1_quality.py  audit_tv_signals.py  backfill_air_density.py  backfill_babip_features.py  backfill_bat_tracking.py  backfill_batter_pitch_type_splits.py  backfill_batting_order_at_slate.py  backfill_bullpen.py  backfill_bullpen_rest.py  backfill_bvp_shrunken.py  backfill_card_boost_and_drafts.py  backfill_catcher_framing.py  backfill_dfs_ownership.py  backfill_game_externals.py  backfill_game_meta.py  backfill_historical_conditions.py  backfill_il_return_flag.py  backfill_lineup_handedness_and_pythag.py  backfill_park_hand_factors.py  backfill_pitcher_arsenal.py  backfill_pitcher_batted_ball.py  backfill_pitcher_boxscore.py  backfill_pitcher_handedness.py  backfill_pitcher_rest.py  backfill_pitcher_tto_and_inning.py  backfill_pitcher_velo_trend.py  backfill_plate_discipline.py  backfill_player_externals.py  backfill_player_game_logs.py  backfill_player_platoon_splits.py  backfill_player_rest.py  (+41 more)
scripts/output/: historical_corpus_audit.txt  migration_parity_diff.txt  migration_parity_report.txt
tests/: conftest.py  test_candidate_resolver.py  test_data_collection.py  test_draft_optimizer.py  test_filter_strategy.py  test_invariants.py  test_lineup_cache.py  test_odds_api.py  test_popularity.py  test_rotowire.py  test_routers.py  test_scoring_engine.py  test_smoke.py
tests/fixtures/: rotowire_sample.html
(+35 files in other folders)
