[project]
name = "baseball-dfs"
version = "0.1.0"
description = "Baseball DFS prediction and draft optimization engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "redis[hiredis]>=5.0",
    "scikit-learn>=1.5",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
statcast = ["pybaseball>=2.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
