[project]
name = "ben-oracle"
version = "0.1.0"
description = "Ben Oracle — MLB lineup draft optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "redis[hiredis]>=5.0",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "tenacity>=8.2",
    "alembic>=1.13",
    "pybaseball>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pre-commit>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy relationship() annotations use string forward references that ruff
# cannot resolve. These are legitimate forward refs, not undefined names.
"app/models/*.py" = ["F821"]
