[project]
name = "ben-oracle"
version = "0.1.0"
description = "Ben Oracle — MLB lineup draft optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "redis[hiredis]>=5.0",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "tenacity>=8.2",
    "alembic>=1.13",
    "pybaseball>=2.2",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pre-commit>=3.7", "mypy>=1.10", "types-redis>=4.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy relationship() annotations use string forward references that ruff
# cannot resolve. These are legitimate forward refs, not undefined names.
"app/models/*.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
# Strict-mode flags most likely to catch real bugs without excessive noise
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
# Third-party stubs may not exist for every package; ignore missing imports
# rather than failing the entire check.
ignore_missing_imports = true
# SQLAlchemy's relationship() and mapped_column() use complex metaclasses that
# mypy cannot model well without the sqlalchemy2-stubs plugin.  Exclude models.
exclude = ["app/models/", "app/seed\\.py", "scripts/"]
